# SDL_Learn

./: CMakeLists.txt  main.c
02_getting_an_image_on_the_screen/: main.c
03_Event_Driven_Programming/: main.c
04-optimized_surface_loading_and_soft_streching/: main.c
05_extension_libraries_and_loading_other_image_formats/: main.c
06_Geometry_rendering/: main.c
07_ViewPort/: main.c
